fix alignment of buttons on bonspiel cards and change profile header css

--- a/src/components/Bonspiel.css
+++ b/src/components/Bonspiel.css
@@ -32,7 +32,7 @@
 
 .flip-card {
   perspective: 1000px;
-  height: 40vh;
+  height: 45vh;
   background: transparent;
   margin-bottom: 4%;
 }
@@ -48,7 +48,7 @@
 }
 
 .card-front, .card-back {
-  height: 40vh;
+  height: 45vh;
   backface-visibility: hidden;
 }
 
@@ -68,9 +68,9 @@
 .reg-but {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  margin-top: 5%
+  align-items: center;
+  margin-top: 1%
 }
 
 .reg-but button {
