--- a/src/components/UserProfile.css
+++ b/src/components/UserProfile.css
@@ -7,6 +7,7 @@
   padding-bottom: 10vh;
 }
 
+
 .greeting {
   text-transform: capitalize;
   margin-bottom: 10%;
@@ -19,4 +20,13 @@
 .list-item {
   color: #cc0000;
   margin-top: 1%;
+}
+
+.profile-heading {
+  color: white;
+  background-color: #cc0000;
+  border: 1px solid #2e279d;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  letter-spacing: 3px;
 }
